--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
 
     <header>
-        <h1>Your Name</h1>
+        <h1>Shriya Maharjan</h1>
         <p>Web Developer & Designer</p>
     </header>
 
@@ -69,7 +69,7 @@
 
     <section id="home">
         <h2>Welcome to My Website!</h2>
-        <p>This is a simple example of a personal website. Feel free to customize it according to your needs.</p>
+        
     </section>
 
     <section id="about">
@@ -88,7 +88,7 @@
     </section>
 
     <footer>
-        &copy; 2024 Your Name | Personal Website
+        &copy; 2024 Shriya Maharjan | shriya.com.np
     </footer>
 
 </body>
